--- a/Client/BlazorShop.Client.csproj
+++ b/Client/BlazorShop.Client.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Shared\BlazorShop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\ProductService\" />
+  </ItemGroup>
+
 </Project>
