feat: Entity Framework connected to SQL Server

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=gameshop;trusted_connection=true;Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
