feat: virtual db

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=gameshop;trusted_connection=true;Integrated Security=SSPI"
+    //"DefaultConnection": "Server=.;Database=gameshop;trusted_connection=true;Integrated Security=SSPI",
+    "DefaultConnection": "Data Source = gameshop.mssql.somee.com; Integrated Security = False; Initial Catalog = gameshop; User ID = Foitelija_SQLLogin_1; Password = x2itcj9jnb; Connect Timeout = 15; Encrypt = False; Packet Size = 4096"
   },
   "Logging": {
     "LogLevel": {
