--- a/Server/BlazorShop.Server.csproj
+++ b/Server/BlazorShop.Server.csproj
@@ -23,5 +23,7 @@
     <ProjectReference Include="..\Shared\BlazorShop.Shared.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
